<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AgroSphere Control Center</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="signupRedirectText">Not yet registered?</string>
    <string name="loginRedirectText">Already an user?</string>
    <string name="e_mail">E-Mail</string>
    <string name="email">Введите email</string>
    <string name="password_text">Пароль</string>
    <string name="password_edittext">Введите пароль</string>
    <string name="sign_up_textview">Sign up</string>
    <string name="logout">Logout</string>

    <string name="input_name">Имя устройства</string>
    <string name="input_type">Тип устройства</string>
    <string name="input_pin">Пин устройства</string>
    <string name="save">Сохранить</string>

</resources>
