<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#4CAF50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:background="@drawable/background"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:background="@drawable/background"
            android:padding="10dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/button_background"
            android:stateListAnimator="@animator/button_animator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginRedirectText"
            android:text="@string/loginRedirectText"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>