<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#4CAF50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="140dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background"
                android:drawablePadding="10dp"
                android:hint="@string/email_hint"
                android:padding="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:stateListAnimator="@animator/button_animator"
                android:text="@string/login" />

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:padding="8dp"
                android:text="@string/signupRedirectText"
                android:textSize="18sp" />
        </LinearLayout>

</ScrollView>