<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".AddNewDeviceActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="Добавление нового устройства"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/editTextType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_type"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/editTextPin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_pin"
                android:inputType="numberDecimal"
                android:padding="8dp"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/btnSaveDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"

        android:layout_margin="30dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>