<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".Device2Management">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/device_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_type"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/device_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pin"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/btReadings2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />

    <Button
        android:layout_margin="15dp"
        android:id="@+id/btnON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ON"
        app:layout_constraintTop_toBottomOf="@+id/btReadings2"
        tools:layout_editor_absoluteX="-14dp" />

    <Button
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/btnOFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnON" />

    <Button
        android:id="@+id/btnConn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Отправить пакет данных"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOFF" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_margin="15dp"

        android:text="Назад"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>